# tabled

./: .gitignore  CLA.md  LICENSE  README.md  extract.py  pyproject.toml  run_table_app.py  table_app.py
.github/workflows/: cla.yml  tests.yml
benchmarks/: benchmark.py  scoring.py
scripts/: verify_benchmark_scores.py
tabled/: assignment.py  extract.py  fileinput.py  schema.py  settings.py
tabled/formats/: __init__.py  common.py  csv.py  html.py  markdown.py
tabled/heuristics/: __init__.py  cells.py
tabled/inference/: detection.py  models.py  recognition.py
tabled/input/: fileinput.py  pdflines.py
